tests/paczka2/big_fuzzy/60612084.err
Error in line 4: k0cPVP A421 79,3
Error in line 15: ONIbA7CFv A913 13,2
Error in line 31: ONIbA7CFv A913 71,9
Error in line 33: ONIbA7CFv S876 85,5
Error in line 47: k0cPVP A913 4,9
Error in line 37: JAvbbMQb S876 55,1
Error in line 58: I5CgPA S249 32,1
Error in line 67: I5CgPA A421 17,1
Error in line 68: I5CgPA S249 71,5
Error in line 76: k0cPVP A421 25,5
Error in line 64: S249 A421 86,7
Error in line 94: k0cPVP A913 9,6
Error in line 92: 6uGz S249 59,4
Error in line 97: 6uGz S876 3,7
Error in line 96: k0cPVP A421 55,1
Error in line 101: 6uGz S249 95,7
Error in line 107: S249 S249 69,22
Error in line 103: k0cPVP S876 64,0
Error in line 113: k0cPVP A913 79,6
Error in line 104: 6uGz S876 55,2
Error in line 117: 6uGz A913 10,5
Error in line 125: JAvbbMQb S876 8,7
Error in line 123: S249 S249 205,0
Error in line 132: JAv``MQ` S249 251,1
Error in line 128: I5CgPA S249 29,3
Error in line 129: JAvbbMQb S249 95,1
Error in line 140: ONIbA7CFv S876 0,6
Error in line 135: k0cPVP S876 9,7
Error in line 148: 6uGz A421 79,9
Error in line 157: k0cPVP A913 -1,1
Error in line 146: k0cPVP A913 46,2
Error in line 177: k0cPVP S8ñ6 1,6
Error in line 182: I5CgPA A913 25,3
Error in line 184: S249 S249 29,14
Error in line 185: 6uGz S876 46,5
Error in line 186: 6uGz S249 58,2
Error in line 191: JAvbbMQb A421 56,90
Error in line 175: k0cPVP A421 93,3
Error in line 193: k0cPVP S876 7,7
Error in line 195: ONIbA7CFv S876 77,7
Error in line 196: k0cPVP S249 76,8
Error in line 192: S249 S249 42,9
Error in line 208: k0cPVP S876 22,33
Error in line 201: k0cPVP S876 91,7
Error in line 205: 6uGz A913 57,9
Error in line 219: 6uGz S249 90,5
Error in line 222: k0cPVP S876 92,0
Error in line 220: JAvbbMQb S876 247,5
Error in line 221: 6uGz S876 51,8
Error in line 227: 6uGz A913 25,2
Error in line 217: ONIbA7CFv A913 18,2
Error in line 229: 6uGz A421 60,8
Error in line 238: 6uGz S876 12,7
